--- a/src/kanban/style/header/header.css
+++ b/src/kanban/style/header/header.css
@@ -37,6 +37,7 @@
     top: 55px;
     animation: user-nav-open 200ms ease;
     animation-fill-mode: forwards;
+    z-index: 1;
 }
 
 @keyframes user-nav-open {
